--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
     },
     "require": {
         "php": ">=5.3.9",
-        "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
-        "symfony/symfony": "~2.6 || ^3.0"
+        "sensio/framework-extra-bundle": "~3.0",
+        "symfony/symfony": "^3.0"
     },
     "require-dev": {
     },
